@@ -12,6 +12,9 @@
 * Updated the README with information on using the txLB API.
 * Updated TODO with more thoughts on the same .tac file serving as both the
 proxied, content-serving host as well as the managing service.
+* Changed the manager module to a subpackage due to increasing code growth.
+* Moved checkers into manager.check.
+* Updated manager tests.
 
 2008.07.06 oubiwann
 
